--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.118",
     "@types/moment": "^2.13.0",
-    "babel": "~6.5.1",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
@@ -41,8 +41,20 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "acorn": "^6.0.6",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "grunt": "^1.0.3",
+    "grunt-babel": "^8.0.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-execute": "^0.2.2",
+    "grunt-systemjs-builder": "^1.0.0",
+    "load-grunt-tasks": "^4.0.0",
     "lodash": "^4.17.11",
-    "moment": "^2.12.0",
+    "moment": "^2.24.0",
     "typescript": "^3.1.6"
   }
 }
